tests/baselines/reference/parserIndexMemberDeclaration10.errors.txt
parserIndexMemberDeclaration10.ts(2,11): error TS1434: Unexpected keyword or identifier.


==== parserIndexMemberDeclaration10.ts (1 errors) ====
    class C {
       static static [x: string]: string;
              ~~~~~~
!!! error TS1434: Unexpected keyword or identifier.
    }